--- a/1.new.md
+++ b/1.new.md
@@ -29,7 +29,7 @@ function MyNew( constructor ) {
 
 ```
 
-> 第二种实现方式
+> 第二种偷懒方式
 ```javascript
 function MyNew(constructor) {
   Reflect.construct(constructor, Array.prototype.slice.call(arguments, 1));
