--- a/1.new.md
+++ b/1.new.md
@@ -29,7 +29,7 @@ function MyNew( constructor ) {
 
 ```
 
-> 第二种偷懒方式
+> 第二种偷懒方式, 同样请参照 [MDN Reflect](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Reflect/construct)
 ```javascript
 function MyNew(constructor) {
   Reflect.construct(constructor, Array.prototype.slice.call(arguments, 1));
