--- a/2.hti-curry.md
+++ b/2.hti-curry.md
@@ -1,15 +1,12 @@
 # 如何实现一个函数的柯里化
-> 简单来讲你可以把这个过程理解成一个递归:   
-> 1. `fn(x)(y)(z)(...)` =>   
-> 2. `fn(x)(y)(z, ...)` =>   
-> 3. `fn(x)(y, z, ...)` =>   
-> 4. `fn(x, y, z, ...)` => 这就时我们的原始函数了   
-
-> 所以关键路径如下:  
+> 简单来讲你可以把这个过程理解成一个递归:
+> 1. `fn(x)(y)(...)` =>
+> 2. `fn(x)(y, ...)` =>
+> 3. `fn(x, y, ...)` => 这就是我们的原始函数了
+> 所以关键路径如下:
 > 1. arguments.length >= fn.length, 直接调用fn
 > 2. arguments.length < fn.length, 返回一个函数,接收下一级调用的参数
 > 3. 递归执行以上两步
-
 > 思路清晰后,我们就可以开始写了:
 ```js
 function curry(fn){
