--- a/2.hti-curry.md
+++ b/2.hti-curry.md
@@ -1,13 +1,15 @@
 # 如何实现一个函数的柯里化
-> 简单来讲你可以把这个过程理解成一个递归:
-> 1. `fn(x)(y)(...)` =>
-> 2. `fn(x)(y, ...)` =>
-> 3. `fn(x, y, ...)` => 这就是我们的原始函数了
-> 所以关键路径如下:
-> 1. arguments.length >= fn.length, 直接调用fn
-> 2. arguments.length < fn.length, 返回一个函数,接收下一级调用的参数
-> 3. 递归执行以上两步
-> 思路清晰后,我们就可以开始写了:
+## 简单来讲你可以把这个过程理解成一个递归:
+1. `fn(x)(y)(...)` =>
+2. `fn(x)(y, ...)` =>
+3. `fn(x, y, ...)` => 这就是我们的原始函数了
+
+## 所以关键路径如下:
+1. arguments.length >= fn.length, 直接调用fn
+2. arguments.length < fn.length, 返回一个函数,接收下一级调用的参数
+3. 递归执行以上两步
+
+## 思路清晰后,我们就可以开始写了:
 ```js
 function curry(fn){
     return function curriedFn(...args1){
@@ -21,7 +23,7 @@ function curry(fn){
     };
 }
 ```
-> 接下来我们就可以写一个测试代码看看了
+## 接下来我们就可以写一个测试代码看看了
 ```js
 let sum = curry((a, b, c)=> a + b +c);
 console.log(sum(1, 2, 3));
