--- a/2.hti-curry.md
+++ b/2.hti-curry.md
@@ -5,8 +5,8 @@
 3. `fn(x, y, ...)` => 这就是我们的原始函数了
 
 ## 所以关键路径如下:
-1. arguments.length >= fn.length, 直接调用fn
-2. arguments.length < fn.length, 返回一个函数,接收下一级调用的参数
+1. `arguments.length >= fn.length`, 直接调用fn
+2. `arguments.length < fn.length`, 返回一个函数,接收下一级调用的参数
 3. 递归执行以上两步
 
 ## 思路清晰后,我们就可以开始写了:
